[metadata]
name = jie
version = 0.0.1
url = https://github.com/Jie-Knots/Jie
author = AuTa King
author_email = auta520@live.com
classifiers =
   Development Status :: 1 - Planning
   Framework :: AsyncIO
   Intended Audience :: Developers
   License :: OSI Approved :: BSD License
   Programming Language :: Python :: 3.6
lisense = BSD 3
lisense_file = LICENSE
description = A microservice template

[options]
packages = jie
python_requires = >=3.6
zip_safe = True
